fixes issue with mobile spacing

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  text-align: center;
 }
 
 main {
@@ -13,10 +14,10 @@ main {
   inset: 0px;
   width: 30rem;
   height: 40rem;
-  max-width: 100vw;
-  max-height: 100dvh;
+  max-width: 95vw;
+  max-height: 95dvh;
   margin: auto;
-  border-radius: 5%;
+  border-radius: 1rem;
   font-family: Inter, sans-serif;
 }
 
@@ -46,7 +47,7 @@ main img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 15px;
+  margin-top: 30px;
   gap: 10px;
   width: 70%;
 }
